@@ -65,6 +65,7 @@ OpenLDAP 2.4.24 Engineering
 	Fixed slapd-monitor hasSubordinates generation (ITS#6712)
 	Fixed slapd-sql with null objectClass (ITS#6616)
 	Fixed slapd-sql hasSubordinates generation (ITS#6712)
+	Fixed slapo-accesslog with controls (ITS#6652)
 	Fixed slapo-dynlist callbacks (ITS#6752)
 	Fixed slapo-dynlist entry handling (ITS#6752)
 	Fixed slapo-memberof log messages (ITS#6748)
